--- a/css/styles.css
+++ b/css/styles.css
@@ -4,4 +4,31 @@
 }
 body {
     font-family: 'Roboto', sans-serif;
+    text-align: center;
+    background-color: bisque;
+    color: black;
+}
+/* Link Styles */
+a {
+    text-decoration: none;
+    color: black;
+}
+a:hover {
+    color: lightslategray;
+}
+/* Section Styles */
+.main-nav {
+    width: 100%;
+}
+header {
+    padding: 1rem;
+}
+.main-nav li {
+    padding: 10px 20px;
+    background-color: lightsteelblue;
+    margin: 5px 0;
+}
+ul {
+    list-style-type: none;
+    padding-left: 0;
 }
