--- a/css/styles.css
+++ b/css/styles.css
@@ -3,27 +3,38 @@
     box-sizing: border-box;
 }
 body {
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
     text-align: center;
-    background-color: bisque;
+    background: bisque;
     color: black;
 }
 /* Link Styles */
 a {
     text-decoration: none;
     color: black;
+    font-weight: 700;
 }
 a:hover {
     color: lightslategray;
 }
 /* Section Styles */
-.main-nav {
-    width: 100%;
+main p {
+    padding: 1rem 1.5rem;
+    line-height: 1.5;
+}
+
+footer,
+#contact {
+    padding: 1rem;
+    background-color: lightyellow;
 }
 header {
-    padding: 1rem;
+    padding: 1rem 1rem 2rem;
+    background-color: lightyellow;
 }
-.main-nav li {
+nav li {
     padding: 10px 20px;
     background-color: lightsteelblue;
     margin: 5px 0;
@@ -31,4 +42,77 @@ header {
 ul {
     list-style-type: none;
     padding-left: 0;
+}
+header img,
+header p {
+    padding: 1rem 2rem;
+}
+.port {
+    width: 100%;
+}
+section h3 {
+    margin: 3rem;
+}
+.foot-nav {
+    display: flex;
+}
+.foot-name {
+    margin-right: auto;
+    font-weight: 700;
+}
+.foot-nav a {
+    align-self: center;
+}
+.desk-foot {
+    display: none;
+}
+aside {
+    background-color: lightskyblue;
+    padding-bottom: 2rem;
+    margin-bottom: -8px;
+}
+#skills li {
+    margin-bottom: 1rem;
+}
+
+/* Media Queries */
+@media screen and (min-width: 768px) {
+    .main-nav, #prof-img, #portfolio {
+        display: flex;
+    }
+    .main-nav {
+        flex-direction: row;
+        justify-content: center;
+    }
+    nav li {
+        background-color: lightyellow;
+    }
+    .header-image {
+        order: 1;
+    }
+    #prof-img {
+        text-align: left;
+    }
+    #portfolio {
+        flex-flow: row wrap;
+        justify-content: space-around;
+    }
+    
+    .desk-foot {
+        display: flex;
+    }
+    .desk-foot li {
+        padding:  15px 10px 0;
+    }
+    .mob-foot {
+        display: none;
+    }
+    .container {
+        max-width: 90%;
+        margin: 0 auto;
+    }
+    .row {
+        max-width: 48%;
+        margin: auto;
+    }
 }
