contact p padding adjustment

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,9 @@ aside {
         max-width: 60%;
         margin: 0 auto;
     }
+    .cont {
+        padding: 0 30%;
+    }
 }
 @media screen and (min-width: 1024px) {
     .container {
@@ -140,7 +143,7 @@ aside {
         padding: 1rem 4rem;
     }
     .cont {
-        padding: 0 19rem;
+        padding: 0 30%;
     }
 }
     
