--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ header {
     padding: 1rem 1rem 2rem;
     background-color: lightyellow;
 }
-nav li {
+header li {
     padding: 10px 20px;
     background-color: lightsteelblue;
     margin: 4px 0;
